# openapi-specs/openapi.json
@@ -2,7 +2,7 @@
   "x-generator": "NSwag v14.7.1.0 (NJsonSchema v11.6.1.0 (Newtonsoft.Json v13.0.0.0))",
   "openapi": "3.0.0",
   "info": {
-    "title": "Dating App",
+    "title": "Dating API",
     "description": "An ASP.NET Core Web API for managing Dating items",
     "termsOfService": "https://example.com/terms",
     "contact": {
@@ -180,6 +180,26 @@
                 "schema": {
                   "type": "string",
                   "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Error/admin-secret": {
+      "get": {
+        "tags": [
+          "Error"
+        ],
+        "operationId": "Error_GetSecretAdmin",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
